tests/unit/snapshots/unit__tui_test__branding_logo_done.snap
---
source: tests/unit/tui_test.rs
assertion_line: 202
expression: logo
---
╔═══════════════════════════════════════╗
║  AGR  ────────────────────────■ DONE  ║
╠═══════════════════════════════════════╣
