tests/unit/snapshots/unit__tui_test__colorize_help_logo.snap
---
source: tests/unit/tui_test.rs
assertion_line: 256
expression: output
---
[92m █████╗  ██████╗ ██████╗[0m
[92m██╔══██╗██╔════╝ ██╔══██╗[0m
[92m███████║██║  ███╗██████╔╝[0m
[92m██╔══██║██║   ██║██╔══██╗[0m
[92m██║  ██║╚██████╔╝██║  ██║[0m
[92m╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝[0m
[92m ⏺ REC [0m[90m─────────────────────────────────────────────────────────────────────────[0m
