tests/unit/snapshots/unit__tui_test__colorize_help_mixed.snap
---
source: tests/unit/tui_test.rs
assertion_line: 283
expression: output
---
[92m █████╗  ██████╗ ██████╗[0m
[92m██╔══██╗██╔════╝ ██╔══██╗[0m
[92m███████║██║  ███╗██████╔╝[0m
[92m██╔══██║██║   ██║██╔══██╗[0m
[92m██║  ██║╚██████╔╝██║  ██║[0m
[92m╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝[0m
[92m ⏺ REC [0m[90m─────────────────────────────────────────────────────────────────────────[0m


[ Agent Session Recorder ] - auto-record agent sessions!

Usage: agr <COMMAND>

Commands:
  record   [37mStart recording a session[0m
  status   [37mShow storage statistics[0m
